# yutikor

./: Cargo.toml  README.md
shemes/: UI_Logic.drawio
src/: app.rs  data.rs  main.rs  ui.rs
src/data/: data_impl.rs
src/ui/: content.rs  folder.rs  menu.rs  tools.rs
src/ui/content/: help_background.rs  help_objects.rs  help_page_links.rs  logic.rs
