# Copyright (C) 2026 Xhelgi
# This file is part of Yutikor and is released under the GNU GPL v3.0.

[package]
name = "yutikor"
authors = ["Xhelgi [xhelgi@proton.me]"]
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33.0"
egui_extras = { version = "0.33.0", features = ["all_loaders"] }
image = { version = "0.25", features = ["jpeg", "png"] }
serde = "1"
serde_json = "1"
dirs = "6.0.0"
rfd = "0.15"